Package_Tools/include-C/gnutls/inarbeit/fertig/pkcs11.h

#define GNUTLS_PKCS11_MAX_PIN_LEN 256
typedef int (*gnutls_pkcs11_token_callback_t)(void *const userdata,
					      const char *const label,
					      unsigned retry);
typedef struct gnutls_pkcs11_obj_st *gnutls_pkcs11_obj_t;
#define GNUTLS_PKCS11_FLAG_MANUAL 0 
#define GNUTLS_PKCS11_FLAG_AUTO \
	1 
#define GNUTLS_PKCS11_FLAG_AUTO_TRUSTED \
	(1                              \
	 << 1) 
int gnutls_pkcs11_init(unsigned int flags, const char *deprecated_config_file);
int gnutls_pkcs11_reinit(void);
void gnutls_pkcs11_deinit(void);
void gnutls_pkcs11_set_token_function(gnutls_pkcs11_token_callback_t fn,
				      void *userdata);
void gnutls_pkcs11_set_pin_function(gnutls_pin_callback_t fn, void *userdata);
gnutls_pin_callback_t gnutls_pkcs11_get_pin_function(void **userdata);
int gnutls_pkcs11_add_provider(const char *name, const char *params);
int gnutls_pkcs11_obj_init(gnutls_pkcs11_obj_t *obj);
void gnutls_pkcs11_obj_set_pin_function(gnutls_pkcs11_obj_t obj,
					gnutls_pin_callback_t fn,
					void *userdata);
typedef enum gnutls_pkcs11_obj_flags {
	GNUTLS_PKCS11_OBJ_FLAG_LOGIN = (1 << 0),
	GNUTLS_PKCS11_OBJ_FLAG_MARK_TRUSTED = (1 << 1),
	GNUTLS_PKCS11_OBJ_FLAG_MARK_SENSITIVE = (1 << 2),
	GNUTLS_PKCS11_OBJ_FLAG_LOGIN_SO = (1 << 3),
	GNUTLS_PKCS11_OBJ_FLAG_MARK_PRIVATE = (1 << 4),
	GNUTLS_PKCS11_OBJ_FLAG_MARK_NOT_PRIVATE = (1 << 5),
	GNUTLS_PKCS11_OBJ_FLAG_RETRIEVE_ANY = (1 << 6),
	GNUTLS_PKCS11_OBJ_FLAG_RETRIEVE_TRUSTED =
		GNUTLS_PKCS11_OBJ_FLAG_MARK_TRUSTED,
	GNUTLS_PKCS11_OBJ_FLAG_MARK_DISTRUSTED = (1 << 8),
	GNUTLS_PKCS11_OBJ_FLAG_RETRIEVE_DISTRUSTED =
		GNUTLS_PKCS11_OBJ_FLAG_MARK_DISTRUSTED,
	GNUTLS_PKCS11_OBJ_FLAG_COMPARE = (1 << 9),
	GNUTLS_PKCS11_OBJ_FLAG_PRESENT_IN_TRUSTED_MODULE = (1 << 10),
	GNUTLS_PKCS11_OBJ_FLAG_MARK_CA = (1 << 11),
	GNUTLS_PKCS11_OBJ_FLAG_MARK_KEY_WRAP = (1 << 12),
	GNUTLS_PKCS11_OBJ_FLAG_COMPARE_KEY = (1 << 13),
	GNUTLS_PKCS11_OBJ_FLAG_OVERWRITE_TRUSTMOD_EXT = (1 << 14),
	GNUTLS_PKCS11_OBJ_FLAG_MARK_ALWAYS_AUTH = (1 << 15),
	GNUTLS_PKCS11_OBJ_FLAG_MARK_EXTRACTABLE = (1 << 16),
	GNUTLS_PKCS11_OBJ_FLAG_NEVER_EXTRACTABLE = (1 << 17),
	GNUTLS_PKCS11_OBJ_FLAG_CRT = (1 << 18),
	GNUTLS_PKCS11_OBJ_FLAG_WITH_PRIVKEY = (1 << 19),
	GNUTLS_PKCS11_OBJ_FLAG_PUBKEY = (1 << 20),
	GNUTLS_PKCS11_OBJ_FLAG_NO_STORE_PUBKEY = GNUTLS_PKCS11_OBJ_FLAG_PUBKEY,
	GNUTLS_PKCS11_OBJ_FLAG_PRIVKEY = (1 << 21),
	GNUTLS_PKCS11_OBJ_FLAG_MARK_NOT_SENSITIVE = (1 << 22),
} gnutls_pkcs11_obj_flags;
typedef enum {
	GNUTLS_PKCS11_URL_GENERIC, 
	GNUTLS_PKCS11_URL_LIB, 
	GNUTLS_PKCS11_URL_LIB_VERSION 
} gnutls_pkcs11_url_type_t;
int gnutls_pkcs11_obj_import_url(gnutls_pkcs11_obj_t obj, const char *url,
				 unsigned int flags
				 );
int gnutls_pkcs11_obj_export_url(gnutls_pkcs11_obj_t obj,
				 gnutls_pkcs11_url_type_t detailed, char **url);
void gnutls_pkcs11_obj_deinit(gnutls_pkcs11_obj_t obj);
int gnutls_pkcs11_obj_export(gnutls_pkcs11_obj_t obj, void *output_data,
			     size_t *output_data_size);
int gnutls_pkcs11_obj_export2(gnutls_pkcs11_obj_t obj, gnutls_datum_t *out);
int gnutls_pkcs11_obj_export3(gnutls_pkcs11_obj_t obj,
			      gnutls_x509_crt_fmt_t fmt, gnutls_datum_t *out);
int gnutls_pkcs11_get_raw_issuer(const char *url, gnutls_x509_crt_t cert,
				 gnutls_datum_t *issuer,
				 gnutls_x509_crt_fmt_t fmt, unsigned int flags);
int gnutls_pkcs11_get_raw_issuer_by_dn(const char *url,
				       const gnutls_datum_t *dn,
				       gnutls_datum_t *issuer,
				       gnutls_x509_crt_fmt_t fmt,
				       unsigned int flags);
int gnutls_pkcs11_get_raw_issuer_by_subject_key_id(
	const char *url, const gnutls_datum_t *dn, const gnutls_datum_t *spki,
	gnutls_datum_t *issuer, gnutls_x509_crt_fmt_t fmt, unsigned int flags);
unsigned gnutls_pkcs11_crt_is_known(const char *url, gnutls_x509_crt_t cert,
				    unsigned int flags);
int gnutls_pkcs11_copy_pubkey(const char *token_url, gnutls_pubkey_t crt,
			      const char *label, const gnutls_datum_t *cid,
			      unsigned int key_usage, unsigned int flags);
int gnutls_pkcs11_copy_x509_crt2(const char *token_url, gnutls_x509_crt_t crt,
				 const char *label, const gnutls_datum_t *id,
				 unsigned int flags
				 );
int gnutls_pkcs11_copy_x509_privkey2(const char *token_url,
				     gnutls_x509_privkey_t key,
				     const char *label,
				     const gnutls_datum_t *cid,
				     unsigned int key_usage
				     ,
				     unsigned int flags
);
int gnutls_pkcs11_delete_url(const char *object_url, unsigned int flags
			     );
int gnutls_pkcs11_copy_secret_key(const char *token_url, gnutls_datum_t *key,
				  const char *label,
				  unsigned int key_usage
				  ,
				  unsigned int flags
				  );
typedef enum {
	GNUTLS_PKCS11_OBJ_ID_HEX = 1,
	GNUTLS_PKCS11_OBJ_LABEL,
	GNUTLS_PKCS11_OBJ_TOKEN_LABEL,
	GNUTLS_PKCS11_OBJ_TOKEN_SERIAL,
	GNUTLS_PKCS11_OBJ_TOKEN_MANUFACTURER,
	GNUTLS_PKCS11_OBJ_TOKEN_MODEL,
	GNUTLS_PKCS11_OBJ_ID,
	GNUTLS_PKCS11_OBJ_LIBRARY_VERSION,
	GNUTLS_PKCS11_OBJ_LIBRARY_DESCRIPTION,
	GNUTLS_PKCS11_OBJ_LIBRARY_MANUFACTURER
} gnutls_pkcs11_obj_info_t;
int gnutls_pkcs11_obj_get_ptr(gnutls_pkcs11_obj_t obj, void **ptr,
			      void **session, void **ohandle,
			      unsigned long *slot_id, unsigned int flags);
int gnutls_pkcs11_obj_get_info(gnutls_pkcs11_obj_t obj,
			       gnutls_pkcs11_obj_info_t itype, void *output,
			       size_t *output_size);
int gnutls_pkcs11_obj_set_info(gnutls_pkcs11_obj_t obj,
			       gnutls_pkcs11_obj_info_t itype, const void *data,
			       size_t data_size, unsigned flags);
#define GNUTLS_PKCS11_OBJ_ATTR_CRT_ALL GNUTLS_PKCS11_OBJ_FLAG_CRT
#define GNUTLS_PKCS11_OBJ_ATTR_MATCH 0 
#define GNUTLS_PKCS11_OBJ_ATTR_ALL 0 
#define GNUTLS_PKCS11_OBJ_ATTR_CRT_TRUSTED \
	(GNUTLS_PKCS11_OBJ_FLAG_CRT | GNUTLS_PKCS11_OBJ_FLAG_MARK_TRUSTED)
#define GNUTLS_PKCS11_OBJ_ATTR_CRT_WITH_PRIVKEY \
	(GNUTLS_PKCS11_OBJ_FLAG_CRT | GNUTLS_PKCS11_OBJ_FLAG_WITH_PRIVKEY)
#define GNUTLS_PKCS11_OBJ_ATTR_CRT_TRUSTED_CA                          \
	(GNUTLS_PKCS11_OBJ_FLAG_CRT | GNUTLS_PKCS11_OBJ_FLAG_MARK_CA | \
	 GNUTLS_PKCS11_OBJ_FLAG_MARK_TRUSTED)
#define GNUTLS_PKCS11_OBJ_ATTR_PUBKEY GNUTLS_PKCS11_OBJ_FLAG_PUBKEY
#define GNUTLS_PKCS11_OBJ_ATTR_PRIVKEY GNUTLS_PKCS11_OBJ_FLAG_PRIVKEY
typedef enum {
	GNUTLS_PKCS11_TOKEN_LABEL,
	GNUTLS_PKCS11_TOKEN_SERIAL,
	GNUTLS_PKCS11_TOKEN_MANUFACTURER,
	GNUTLS_PKCS11_TOKEN_MODEL,
	GNUTLS_PKCS11_TOKEN_MODNAME
} gnutls_pkcs11_token_info_t;
typedef enum {
	GNUTLS_PKCS11_OBJ_UNKNOWN,
	GNUTLS_PKCS11_OBJ_X509_CRT,
	GNUTLS_PKCS11_OBJ_PUBKEY,
	GNUTLS_PKCS11_OBJ_PRIVKEY,
	GNUTLS_PKCS11_OBJ_SECRET_KEY,
	GNUTLS_PKCS11_OBJ_DATA,
	GNUTLS_PKCS11_OBJ_X509_CRT_EXTENSION
} gnutls_pkcs11_obj_type_t;
int gnutls_pkcs11_token_init(const char *token_url, const char *so_pin,
			     const char *label);
int gnutls_pkcs11_token_get_ptr(const char *url, void **ptr,
				unsigned long *slot_id, unsigned int flags);
int gnutls_pkcs11_token_get_mechanism(const char *url, unsigned int idx,
				      unsigned long *mechanism);
unsigned gnutls_pkcs11_token_check_mechanism(const char *url,
					     unsigned long mechanism, void *ptr,
					     unsigned psize, unsigned flags);
int gnutls_pkcs11_token_set_pin(const char *token_url, const char *oldpin,
				const char *newpin,
				unsigned int flags );
int gnutls_pkcs11_token_get_url(unsigned int seq,
				gnutls_pkcs11_url_type_t detailed, char **url);
int gnutls_pkcs11_token_get_info(const char *url,
				 gnutls_pkcs11_token_info_t ttype, void *output,
				 size_t *output_size);
#define GNUTLS_PKCS11_TOKEN_HW 1
#define GNUTLS_PKCS11_TOKEN_TRUSTED (1 << 1) 
#define GNUTLS_PKCS11_TOKEN_RNG (1 << 2) 
#define GNUTLS_PKCS11_TOKEN_LOGIN_REQUIRED (1 << 3) 
#define GNUTLS_PKCS11_TOKEN_PROTECTED_AUTHENTICATION_PATH \
	(1 << 4) 
#define GNUTLS_PKCS11_TOKEN_INITIALIZED (1 << 5) 
#define GNUTLS_PKCS11_TOKEN_USER_PIN_COUNT_LOW \
	(1 << 6) 
#define GNUTLS_PKCS11_TOKEN_USER_PIN_FINAL_TRY \
	(1 << 7) 
#define GNUTLS_PKCS11_TOKEN_USER_PIN_LOCKED (1 << 8) 
#define GNUTLS_PKCS11_TOKEN_SO_PIN_COUNT_LOW (1 << 9) 
#define GNUTLS_PKCS11_TOKEN_SO_PIN_FINAL_TRY \
	(1 << 10) 
#define GNUTLS_PKCS11_TOKEN_SO_PIN_LOCKED (1 << 11) 
#define GNUTLS_PKCS11_TOKEN_USER_PIN_INITIALIZED \
	(1 << 12) 
#define GNUTLS_PKCS11_TOKEN_ERROR_STATE (1 << 13) 
int gnutls_pkcs11_token_get_flags(const char *url, unsigned int *flags);
int gnutls_pkcs11_obj_list_import_url3(gnutls_pkcs11_obj_t *p_list,
				       unsigned int *const n_list,
				       const char *url, unsigned int flags
);
int gnutls_pkcs11_obj_list_import_url4(gnutls_pkcs11_obj_t **p_list,
				       unsigned int *n_list, const char *url,
				       unsigned int flags
);
int gnutls_x509_crt_import_pkcs11(gnutls_x509_crt_t crt,
				  gnutls_pkcs11_obj_t pkcs11_crt);
gnutls_pkcs11_obj_type_t gnutls_pkcs11_obj_get_type(gnutls_pkcs11_obj_t obj);
const char *gnutls_pkcs11_type_get_name(gnutls_pkcs11_obj_type_t type);
int gnutls_pkcs11_obj_get_exts(gnutls_pkcs11_obj_t obj,
			       struct gnutls_x509_ext_st **exts,
			       unsigned int *exts_size, unsigned int flags);
int gnutls_pkcs11_obj_get_flags(gnutls_pkcs11_obj_t obj, unsigned int *oflags);
char *gnutls_pkcs11_obj_flags_get_str(unsigned int flags);
int gnutls_x509_crt_list_import_pkcs11(gnutls_x509_crt_t *certs,
				       unsigned int cert_max,
				       gnutls_pkcs11_obj_t *const objs,
				       unsigned int flags
				       );
int gnutls_pkcs11_privkey_init(gnutls_pkcs11_privkey_t *key);
int gnutls_pkcs11_privkey_cpy(gnutls_pkcs11_privkey_t dst,
			      gnutls_pkcs11_privkey_t src);
void gnutls_pkcs11_privkey_set_pin_function(gnutls_pkcs11_privkey_t key,
					    gnutls_pin_callback_t fn,
					    void *userdata);
void gnutls_pkcs11_privkey_deinit(gnutls_pkcs11_privkey_t key);
int gnutls_pkcs11_privkey_get_pk_algorithm(gnutls_pkcs11_privkey_t key,
					   unsigned int *bits);
int gnutls_pkcs11_privkey_get_info(gnutls_pkcs11_privkey_t pkey,
				   gnutls_pkcs11_obj_info_t itype, void *output,
				   size_t *output_size);
int gnutls_pkcs11_privkey_import_url(gnutls_pkcs11_privkey_t pkey,
				     const char *url, unsigned int flags);
int gnutls_pkcs11_privkey_export_url(gnutls_pkcs11_privkey_t key,
				     gnutls_pkcs11_url_type_t detailed,
				     char **url);
unsigned gnutls_pkcs11_privkey_status(gnutls_pkcs11_privkey_t key);